# eda_test_unit4pgbench

./: .gitignore  pyproject.toml
data/: eticum_params.csv  eticum_params2.csv  eticum_params2.xlsx  prepared_df.csv  prepared_df2.csv  res_eticum2.xlsx
notebooks/: model_tuning.ipynb  model_tuning2.ipynb  prepare_pipeline.ipynb  prepare_pipeline_2.ipynb
raw_data/: full_compared_df.json
src/: gen_client_data.py
