[tool.poetry]
name = "eda-test-unit4pgbench"
version = "0.1.0"
description = "Исследование и обучение моделей для анализа эффективности pgpool2"
authors = ["Новиков Илья <nov.ilucha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
tqdm = "^4.66.2"
pyarrow = "^15.0.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
